--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   				</div>
 
     			<div class="col-md-4 justify-content-center">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/IMG_9859.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/IMG_9859.JPG);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="#">Commpany Visit</a></h3>
